--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <!-- <!DOCTYPE html>
+<html lang="ru">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Получи 0.1 MON за подписку на @havier2000!</title>
@@ -128,4 +131,6 @@
         });
     </script>
 </body>
+</html> -->
+    ...
 </html>
